--- a/todo.css
+++ b/todo.css
@@ -2,9 +2,22 @@
     color: rgb(85, 85, 85);
     text-decoration: line-through;
 }
+.done:hover{
+    color: rgb(85, 85, 85);
+    text-decoration: line-through;
+    font-size: inherit;
+}
+
+.input{
+    background-color: black;
+}
+
+.card{
+    max-width: 100%;
+}
 
 body{
-    background-color: rgb(0, 59, 0);
+    background-color: #2d2d2e;
     text-align: center;
 }
 
@@ -14,4 +27,9 @@ h1{
 
 li{
     color: white;
+}
+li:hover{
+    color: red;
+    font-size:1rem;
+    transition: all 300ms;
 }
